[package]
name = "iperf3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mutex = "1.4.0"
clap = { version = "4.3.5", features = ["cargo"] }
regex = "1.8.4"
tokio = { version = "1.28.2", features = ["net", "full"] }
