[package]
name = "iperf3d"
description = "iperf3 client and server wrapper for dynamic server ports"
version = "1.0.0"
edition = "2021"
authors = [ "Jennifer Graul <jennifer.graul@wobcom.de>" ]
license = "MIT"
repository = "https://github.com/wobcom/iperf3d"

[dependencies]
async-mutex = "1.4.0"
clap = { version = "4.3.5", features = ["cargo"] }
regex = "1.8.4"
tokio = { version = "1.28.2", features = ["net", "full"] }
